# eiti-pobr-logo-recognition

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Sconstruct
docs/latex/: main.tex
src/: main.cpp
src/img-processing/: ImgProcessor.cpp  ImgProcessor.hpp
src/img-processing/structs/: Candidate.hpp  Segment.cpp  Segment.hpp
src/img-processing/utils/: binarization.cpp  binarization.hpp  converters.cpp  converters.hpp  detection.cpp  detection.hpp  enhance.cpp  enhance.hpp  matrix-ops.cpp  matrix-ops.hpp  matrix-ops.impl.hpp  segmentation.cpp  segmentation.hpp
src/main/: App.cpp  App.hpp
src/modules/error-handler/: ErrorHandler.cpp  ErrorHandler.hpp
src/modules/terminal-printer/: TerminalPrinter.cpp  TerminalPrinter.hpp
src/utils/: consts.hpp
src/utils/cmd-parser/: CmdParser.cpp  CmdParser.hpp
src/utils/error-handler/: ErrorHandler.cpp  ErrorHandler.hpp
src/utils/logger/: Logger.cpp  Logger.hpp
src/utils/performance-timer/: PerformanceTimer.cpp  PerformanceTimer.hpp
src/utils/terminal-printer/: TerminalPrinter.cpp  TerminalPrinter.hpp
utilities/: calculate-ranges.js
